--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
     background-color: white;
     min-height: 500px;
     width: 320px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 20px;
 }
 img{
@@ -24,12 +24,14 @@ img{
 }
 
 p{
-    font-size: 15px;
+    font-size: 17px;
     color: hsl(216, 15%, 48%);
-    margin: 10px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 h1{
-    font-size: 21px;
-    margin-top: 20px;
+    font-size: 23px;
+}
+.text_container{
+    justify-content: center;
+    padding: 20px;
 }
