--- a/index.css
+++ b/index.css
@@ -21,6 +21,9 @@ img{
     height: 300px;
     margin: 10px;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 p{
